2010-12-10:
 - No inserted whitespace after certain rename refactorings
 - Version 0.9.17

2010-12-09:
 - Find usages now is able to group by Read/Write access

2010-12-03:
 - Improved parsing of parameter substitutions, e.g. for ${a:=b} assignments and ${!a} indirect references
 - Formatter fixes

2010-11-25:
 - Version 0.9.16-ideaX

2010-11-23:
 - Compilation fixes to work with 98.402

2010-11-02:
 - Lexer fix for `for f in ...`

2010-10-05:
 - Removed use of class DefaultRefactoring provider, restored compatibility with latest IDEA X EAPs
 - Version 0.9.15-ideaX
 
2010-08-12:
 - Fixed redirection parsing
 - Version 0.9.14-maia

2010-07-28:
 - Fixed parsing of single $ characters, e.g. "$a$"
 - Improved parsing of for loops
 - Fixed resolving of global variables

2010-07-23:
 - Fixed exception which occured while adding a REPL console
 
2010-07-22:
 - Lexer improvements

2010-07-21:
 - Fixed new Bash script action if the extension .bash was used
 
2010-07-20:
 - Many improvements to arithmetic expression parsing
 
2010-07-17:
 - Fixed evaluation of advanced arithmetic expressions
 - Improvements to the lexer
 - More test cases

2010-07-13:
 - Finally fixed the variable resolving issues (hopefully)

2010-07-12:
 - Improved variable resolving if definitions on different levels are present
 
2010-07-10:
 - Implemented parsing of process substitution elements

2010-07-08:
 - Fixed variable resolving, once again

2010-07-05:
 - Version 0.9.13-maia
 
2010-07-01:
 - Fixed method not found error in EvaluateExpansionInspection
 
2010-06-30:
 - Refactoring to use the official API's psi walkThrough method
 - More PSI test cases for command variants, variable variants, heredoc marker resolving

2010-06-29:
 - Reworked and improved variable resolving

2010-06-16:
 - Fixed exception "Directory index is not initialized yet ..."

2010-06-15:
 - PSI resolve test cases

2010-06-12:
 - Code cleanup
 - Removed dead code

2010-06-09: