@@ -35,5 +35,4 @@ public class BashStringUtils {
 
         return count;
     }
-
 }
