@@ -24,7 +24,7 @@ import com.ansorgit.plugins.bash.lang.psi.api.vars.BashVar;
 import com.ansorgit.plugins.bash.lang.psi.api.vars.BashVarDef;
 import com.intellij.lang.refactoring.RefactoringSupportProvider;
 import com.intellij.psi.PsiElement;
-import org.jetbrains.annotations.NotNull;
+import com.intellij.refactoring.RefactoringActionHandler;
 
 /**
  * Definition of the refactoring support available in this plugin.
@@ -41,5 +41,10 @@ public class BashRefactoringSupport extends RefactoringSupportProvider {
                 (element instanceof BashFunctionDef) ||
                 (element instanceof BashVar) ||
                 (element instanceof BashHereDocMarker);
+    }
+
+    @Override
+    public RefactoringActionHandler getIntroduceVariableHandler() {
+        return new BashIntroduceVariableHandler();
     }
 }
